# Zeta

./: .gitignore  main.py  pyproject.toml
core/: config.py  database.py  engine.py  mt5_client.py
docs/: README.md
strategies/: base_strategy.py  ma_crossover_strategy.py
ui/: log_handler.py  main_window.py
